--- a/yxy/coba2.css
+++ b/yxy/coba2.css
@@ -1081,7 +1081,7 @@ strong {
 .ds4 .trigger {
     width: 99px;
     height: 100%;
-    background: url(https://github.com/gavanha/gapi.github.io/blob/main/yxy/Trigger_Pressed.png?raw=true);
+    background: url(https://imgur.com/E768gI2.png);
     opacity: 0;
 }
 
@@ -1215,7 +1215,7 @@ background-position: 0 -70px;
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(https://github.com/gavanha/gapi.github.io/blob/main/yxy/FaceButtons.png?raw=true);
+    background: url(https://imgur.com/qEWWcFQ.png);
 }
 
 .ds4 .button.pressed {
@@ -1288,7 +1288,7 @@ background-position: 0 -70px;
 }
 
 .ds4 .face {
-    background: url(https://github.com/gavanha/gapi.github.io/blob/main/yxy/Dpad.png?raw=true);
+    background: url(https://imgur.com/4AHFzNH.png);
     position: absolute;
 }
 
